[tool.poetry]
name = "poem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.8"
psycopg2 = "^2.8"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
